kubernetes/002_smm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smm
  template:
    metadata:
      labels:
        app: smm
    spec:
      containers:
        - name: smm
          image: gravitate-registry.cr.de-fra.ionos.com/smm-service:latest 
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: "1"
              memory: "512Mi"
            requests:
              cpu: "0.5"
              memory: "256Mi"
