kubernetes/003_smm-network.yaml
apiVersion: v1
kind: Service
metadata:
  name: smm-service
spec:
  selector:
    app: your-app-label
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: smm-virtual-service
spec:
  hosts:
    - "*"
  gateways:
    - gh-gateway
  http:
    - match:
        - uri:
            prefix: /smm/
      rewrite:
        uri: "/"
      route:
        - destination:
            host: smm-service.default.svc.cluster.local
            port:
              number: 3000
